Vendor module update

--- a/Frontend/tiffinwala/src/index.css
+++ b/Frontend/tiffinwala/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex-grow: 1; /* This will ensure the content area expands and the footer stays at the bottom */
+}
